# Server_lab5

./: CMakeLists.txt  README.md
ClientServer/: CMakeLists.txt
ClientServer/Include/: SendGetFunc.h  Server.h
ClientServer/Source/: SendGetFunc.cpp  Server.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: ClientHandler.h  Logger.h  SandGetFile.h  Server.h  sendLists.h
Server/include/FunctionsServerh/: align.h  blackwhite.h  gauss.h  rotate.h
Server/source/: ClientHandler.cpp  Logger.cpp  SendGetFile.cpp  Server.cpp  main.cpp  sendLists.cpp
Server/source/FunctionsServer/: align.cpp  blackwhite.cpp  gauss.cpp  rotate.cpp
Server_HTTP(demo)/: CMakeLists.txt
Server_HTTP(demo)/Resources/: web_interface.html
Server_HTTP(demo)/include/: ClientHandler.h  Server.h  sendWebList.h
Server_HTTP(demo)/source/: ClientHandler.cpp  Logger.cpp  Server.cpp  sendWebList.cpp
Server_HTTP(demo)/source/FunctionsServer/: gaussian.cpp
source/: Server.cpp  main.cpp
